added button variant

--- a/components/01-atoms/button/button.config.yml
+++ b/components/01-atoms/button/button.config.yml
@@ -1,2 +1,9 @@
+default: Primary
+collated: true
 context:
   text: Button
+variants:
+  - name: Secondary
+    context:
+      modifiers:
+        - secondary
